--- a/ljh_viewWorkspace/TodoList/test/todo_test.html
+++ b/ljh_viewWorkspace/TodoList/test/todo_test.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>to-do list </title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="./todo_test.css">
+    <script src="./todo_test.js" defer></script>
     <script src="https://kit.fontawesome.com/116a85af51.js" crossorigin="anonymous"></script>
 </head>
 <body>
