--- a/틱택토/틱택토.html
+++ b/틱택토/틱택토.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./ex_틱택토.js" defer></script>
-    <link rel="stylesheet" href="./ex_틱택토.css">
+    <script src="./틱택토.js" defer></script>
+    <link rel="stylesheet" href="./틱택토.css">
 </head>
 <body>
-    <table>
-        <caption>Tic Tac Toe</caption>
+    <header>Tic Tac Toe</header>
+    <div class="container">
+        <button class="start">Game Start</button>
+    <!-- <table>
         <tr class="row1">
             <td></td>
             <td></td>
@@ -26,7 +28,7 @@
             <td></td>
             <td></td>
         </tr>
-    </table>
-
+    </table> -->
+    </div>
 </body>
 </html>
