--- a/ex_1to50.html
+++ b/ex_1to50.html
@@ -11,46 +11,11 @@
     <body>
         <div class="container">
             <header>1 to 50</header>
-            <button id="start" style="display: block">게임 시작</button>
             <div class="timer">00:10:00</div>
+            <button id="start" style="display: block">게임 시작</button>
+            <div id="gameOver" style="display: none">Game Over</div>
             <button id="restart" style="display: none">게임 다시 시작</button>
-            <table>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+            <div class="game"></div>
         </div>
     
     </body>
