--- a/1to50/ex_1to50.html
+++ b/1to50/ex_1to50.html
@@ -20,3 +20,18 @@
     
     </body>
     </html>
+
+    <!-- if(timeflag == false){
+        timeflag = true;
+        time = setInterval(() => {
+            cnt++;
+            let ms = cnt%10;
+            sec = parseInt(cnt/10);
+            hour = 0;
+            if(sec == 60){
+                cnt = 0;
+                min ++;
+            }
+            timer.innerHTML = `${hour} : ${min}: ${sec}.${ms}`;
+        }, 100);
+    } -->
