--- a/GameProject/golagola.html
+++ b/GameProject/golagola.html
@@ -21,7 +21,7 @@
             Stage<br>
             Mission<br>
             Hit아이템<br>
-            <div class="time">20:00</div>
+            <div id="timer">20:00</div>
         </div>
     </div>
 </body>
