--- a/GameProject/golagola.html
+++ b/GameProject/golagola.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>골라골라</title>
+    <title>GolaGola</title>
     <link rel="stylesheet" href="golagola.css">
     <script src="./gola_time.js" defer></script>
     <script src="./golagola.js" defer></script>
 </head>
 <body>
     <!-- <canvas id="canvasC"><div>캔버스</div></canvas> -->
-    <div id="main" style="visibility:visible">
+    <div id="main" style="visibility: visible">
         <div id="gola">
-            <div>골라골라</div>
+            <div>Gola Gola</div>
             <div id='bigBag'></div>
         </div>
 
@@ -31,14 +31,14 @@
                     <td class="item" data-y="0" data-x="2"></td>
                     <td class="item" data-y="0" data-x="3"></td>
                     <td class="item" data-y="0" data-x="4"></td>
-                </tr>
+                </tr> 
                 <tr>
                     <td class="item" data-y="1" data-x="0"></td>
                     <td class="item" data-y="1" data-x="1"></td>
                     <td class="item" data-y="1" data-x="2"></td>
                     <td class="item" data-y="1" data-x="3"></td>
                     <td class="item" data-y="1" data-x="4"></td>
-                </tr>
+                </tr> 
                 <tr>
                     <td class="item" data-y="2" data-x="0"></td>
                     <td class="item" data-y="2" data-x="1"></td>
@@ -61,7 +61,6 @@
                     <td class="item" data-y="4" data-x="4"></td>
                 </tr>
             </table>
-
         </div>
         <div id="timeBar">
             <img src="./시계.gif" autoplay=1 loop=1 controls width="40px" height="50px"></img>
